MDEV-12181 ST_AsGeoJSON argument does not limit decimals.

Options handling implemented for ST_AsGeoJSON.